--- a/Natours Project/index.html
+++ b/Natours Project/index.html
@@ -32,14 +32,25 @@
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text Content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You' re going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et beatae ea eaque dolorum numquam! Impedit consequatur recusandae necessitatibus quasi quas. Suscipit maxime animi perspiciatis est ab ducimus aperiam?
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et beatae ea eaque dolorum numquam! Impedit consequatur recusandae necessitatibus.
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+
                     </div>
                     <div class="col-2-of-2">
                        Image composition     
